docs/envoy/v1.20.6/_sources/api-v3/extensions/filters/http/squash/v3/squash.proto.rst.txt
.. _envoy_v3_api_file_contrib/envoy/extensions/filters/http/squash/v3/squash.proto:

Squash
======




.. _extension_envoy.filters.http.squash:

This extension may be referenced by the qualified name ``envoy.filters.http.squash``


.. note::
  This extension is only available in :ref:`contrib <install_contrib>` images.


.. note::
  

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http <extension_category_envoy.filters.http>`

Squash :ref:`configuration overview <config_http_filters_squash>`.

.. _envoy_v3_api_msg_extensions.filters.http.squash.v3.Squash:

extensions.filters.http.squash.v3.Squash
----------------------------------------

:repo:`[extensions.filters.http.squash.v3.Squash proto] <api/contrib/envoy/extensions/filters/http/squash/v3/squash.proto#L21>`


.. code-block:: json

  {
    "cluster": "...",
    "attachment_template": "{...}",
    "request_timeout": "{...}",
    "attachment_timeout": "{...}",
    "attachment_poll_period": "{...}"
  }

.. _envoy_v3_api_field_extensions.filters.http.squash.v3.Squash.cluster:

cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the cluster that hosts the Squash server.
  
  
.. _envoy_v3_api_field_extensions.filters.http.squash.v3.Squash.attachment_template:

attachment_template
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) When the filter requests the Squash server to create a DebugAttachment, it will use this
  structure as template for the body of the request. It can contain reference to environment
  variables in the form of '{{ ENV_VAR_NAME }}'. These can be used to provide the Squash server
  with more information to find the process to attach the debugger to. For example, in a
  Istio/k8s environment, this will contain information on the pod:
  
  .. code-block:: json
  
   {
     "spec": {
       "attachment": {
         "pod": "{{ POD_NAME }}",
         "namespace": "{{ POD_NAMESPACE }}"
       },
       "match_request": true
     }
   }
  
  (where POD_NAME, POD_NAMESPACE are configured in the pod via the Downward API)
  
  
.. _envoy_v3_api_field_extensions.filters.http.squash.v3.Squash.request_timeout:

request_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The timeout for individual requests sent to the Squash cluster. Defaults to 1 second.
  
  
.. _envoy_v3_api_field_extensions.filters.http.squash.v3.Squash.attachment_timeout:

attachment_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The total timeout Squash will delay a request and wait for it to be attached. Defaults to 60
  seconds.
  
  
.. _envoy_v3_api_field_extensions.filters.http.squash.v3.Squash.attachment_poll_period:

attachment_poll_period
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Amount of time to poll for the status of the attachment object in the Squash server
  (to check if has been attached). Defaults to 1 second.
  
  

